<resources>
    <string name="app_name">ImClient</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="create_new_account">注册新用户</string>
    <string name="register">注册</string>
    <string name="submit">提交</string>

    <string name="male">男</string>
    <string name="female">女</string>
    <string name="picker_from_ablum">从相册选择</string>
    <string name="picker_from_camera">拍摄照片</string>
    <string name="reset">重置</string>
    <string name="no_images">相册暂无图片</string>

    <string name="error_account_empty">用户名不能为空</string>
    <string name="error_pwd_empty">用户密码不能为空</string>
    <string name="error_account_fatal">用户名只能包含字母，数字，中文</string>

    <string name="register_success">注册成功</string>

    <string name="msg">消息</string>
    <string name="contacts">通讯录</string>
    <string name="setting">设置</string>
</resources>
