<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/login"
        app:titleTextColor="@color/colorWhite" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_normal"
        android:hint="@string/username"
        android:maxLines="1"
        android:layout_marginTop="@dimen/login_horizontal_margin"
        android:layout_marginRight="@dimen/login_horizontal_margin"
        android:layout_marginLeft="@dimen/login_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_normal"
        android:hint="@string/password"
        android:maxLines="1"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginRight="@dimen/login_horizontal_margin"
        android:layout_marginLeft="@dimen/login_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

</android.support.constraint.ConstraintLayout>