<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ToolbarTheme"
        app:title="@string/register"
        app:titleTextColor="@color/colorWhite" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_horizontal_margin"
        android:layout_marginTop="@dimen/login_horizontal_margin"
        android:layout_marginRight="@dimen/login_horizontal_margin"
        android:hint="@string/username"
        android:maxLines="1"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/error_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:maxLines="1"
        android:textColor="@color/colorError"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/user_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_name" />


    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_horizontal_margin"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginRight="@dimen/login_horizontal_margin"
        android:hint="@string/password"
        android:maxLines="1"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <TextView
        android:id="@+id/error_user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:maxLines="1"
        android:textColor="@color/colorError"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/user_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_password" />

    <RadioGroup
        android:id="@+id/male_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:checkedButton="@id/female_item"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_password">

        <RadioButton
            android:id="@+id/male_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="@dimen/text_size_normal" />

        <RadioButton
            android:id="@+id/female_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:selectAllOnFocus="true"
            android:text="@string/female"
            android:textSize="@dimen/text_size_normal" />
    </RadioGroup>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/user_password"
        app:layout_constraintStart_toStartOf="@+id/user_password" />

</android.support.constraint.ConstraintLayout>